-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 3
-
None
-
-
4ecd0d7b7588bd503995249f6847ac99219bcc02
See the attached example ( main.cpp
).
Actual result:
- Google is not visible
Expected result:
- Google is visible
Before restoring the history a previous WebContents is needed to be created. This can be forced by waiting after show or loading another page. The same issue can be reproduce with Falkon too when restoring session.
- resulted from
-
QTBUG-69360 Page visibility state is "visible" by default
-
- Closed
-
| For Gerrit Dashboard: QTBUG-71400 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 243787,5 | Keep visibility of WebContents when restoring history | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |