Keep visibility of WebContents when restoring history

For restoring history a new WebContents is needed to be created.
Make it visible if the old WebContents was.

Task-number: QTBUG-71400
Change-Id: Ica10545e11413eb4da553f4976f9bf0c20125846
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>